fix(storefront): BCTHEME-172 Card content truncated on zooming browser to 400% (#1803)

--- a/assets/scss/components/stencil/cart/_cart.scss
+++ b/assets/scss/components/stencil/cart/_cart.scss
@@ -18,6 +18,7 @@ $cart-thumbnail-maxHeight:              14rem;
 $cart-thumbnail-paddingVertical:        0.5rem;
 
 $cart-item-label-offset:                $cart-thumbnail-maxWidth + $cart-item-spacing;
+$card-preview-zoom-bottom-offset:       6rem;
 
 //
 // Shared styles for additional checkout buttons
@@ -565,6 +566,11 @@ $cart-item-label-offset:                $cart-thumbnail-maxWidth + $cart-item-sp
 // 1. Need to vertically align a block of text
 //
 // -----------------------------------------------------------------------------
+
+.previewCartWrapper {
+    max-height: calc(100vh - #{$card-preview-zoom-bottom-offset});
+    overflow: auto;
+}
 
 .previewCartList {
     @include u-listReset;
